--- a/PIMC/PIMC/Info.plist
+++ b/PIMC/PIMC/Info.plist
@@ -9,9 +9,9 @@
 	<key>SMPrivilegedExecutables</key>
 	<dict>
 		<key>com.frentree.recon.PIMCPrivilegedTaskRunnerHelper</key>
-		<string>identifier &quot;com.frentree.recon.PIMCPrivilegedTaskRunnerHelper&quot; and anchor apple generic and certificate leaf[subject.CN] = &quot;Apple Development: gontai@gmail.com (99AN8Y9FF5)&quot; and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
+		<string>identifier "com.frentree.recon.PIMCPrivilegedTaskRunnerHelper" and anchor apple generic and certificate leaf[subject.CN] = "Apple Development: gontai@gmail.com (99AN8Y9FF5)" and certificate 1[field.1.2.840.113635.100.6.2.1] /* exists */</string>
 	</dict>
 	<key>version</key>
-	<string>1.0.2</string>
+	<string>1.0.4</string>
 </dict>
 </plist>
